SERVER-23351 ensure applier aquires new minvalid value after rollback